--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "^10.3.7",
     "nuxt3": "latest",
     "postcss": "^8.3.11",
+    "prettier": "2.4.1",
     "tailwindcss": "^2.2.17",
     "@vue/eslint-config-prettier": "6.0.0",
     "@vue/eslint-config-typescript": "8.0.0"
