--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "tailwindcss": "^2.2.17",
     "@vue/eslint-config-prettier": "6.0.0",
     "@vue/eslint-config-typescript": "8.0.0"
+  },
+  "dependencies": {
+    "@headlessui/vue": "1.4.1",
+    "@vueuse/core": "6.7.4",
+    "vue": "3.2.20",
+    "typescript-functional-extensions": "1.0.0-beta.2"
   }
 }
