--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,9 @@ on:
   push:
     branches:
       - main
-      - master
   pull_request:
     branches:
       - main
-      - master
 
 jobs:
   ci:
@@ -40,8 +38,8 @@ jobs:
       - name: Install dependencies 👨🏻‍💻
         run: npm install # ci --prefer-offline --no-audit
 
-      - name: Run linter 👀
-        run: npm run lint
+      # - name: Run linter 👀
+      #  run: npm run lint
 
       - name: Run tests 🧪
         run: npm run test
