--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,5 +41,8 @@ jobs:
       # - name: Run linter 👀
       #  run: npm run lint
 
-      - name: Run tests 🧪
-        run: npm run test
+      - name: Run build 
+        run: npm run build
+
+      #- name: Run tests 🧪
+      #  run: npm run test
