--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
@@ -12,6 +13,7 @@
     "nuxt3": "latest",
     "postcss": "^8.3.11",
     "prettier": "2.4.1",
+    "push-dir": "^0.4.1",
     "tailwindcss": "^2.2.17"
   },
   "dependencies": {
