--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,7 +1,7 @@
 name: ci
 
 on:
-  pull_request:
+  push:
     branches:
       - main
 
@@ -42,3 +42,10 @@ jobs:
         run: npm run build
         env:
           NITRO_PRESET: azure_functions
+
+      - name: "Deploy to Azure Functions"
+        uses: Azure/functions-action@v1
+        with:
+          app-name: kmcmaster-dev
+          package: .output/deploy.zip
+          publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
