--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@ updates:
 - package-ecosystem: npm
   directory: '/'
   schedule:
-    interval: weekly
+    interval: monthly
   open-pull-requests-limit: 10
   reviewers:
     - kyle mcmaster
@@ -18,7 +18,7 @@ updates:
 - package-ecosystem: github-actions
   directory: '/'
   schedule:
-    interval: weekly
+    interval: monthly
   open-pull-requests-limit: 10
   reviewers:
     - kyle mcmaster
